# sqlalchemy_omopcdm_modelgen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: check.yml  docker.yml  pypi.yml
src/modelgen/: __main__.py  config.py  datastructures.py  dbinit.py  rewrite.py  rtfm.py  shellout.py  utils.py
src/modelgen/sql/: eh_mods.sql
